--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   geolocator: ^11.0.0
   fluttertoast: ^8.2.5
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
